// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render a page at a nested permalink 1`] = `
"<!doctype html>
<html>
	<head><title>Nested Page</title></head>
	<body>
		<header>
			<h1>Page title: Nested Page</h1>
			</header>
		<main>
This content lives at \`/page/at/nested/permalink/\`
</main>
		<footer>
			<p>Page footer</p>
		</footer>
	</body>
</html>
"
`;

exports[`render a page at root url 1`] = `
"<!doctype html>
<html>
	<head><title>Root page</title></head>
	<body>
		<header>
			<h1>Page title: Root page</h1>
			</header>
		<main>
This should render on the homepage.
</main>
		<footer>
			<p>Page footer</p>
		</footer>
	</body>
</html>
"
`;

exports[`skips rendering a file 1`] = `3`;
